# daemon

./: .gitignore  Cargo.toml  README.md  coredump-daemon.service  install.sh  uninstall.sh
src/: main.rs
