[package]
name = "coredump"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "coredump-daemon"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
x11 = "2.21"
libc = "0.2"
nix = { version = "0.29", features = ["process"] }
toml = "0.8"
dirs = "5.0"
